@@ -7,7 +7,6 @@ import groovy.transform.CompileStatic
 import org.jetbrains.annotations.NotNull
 import org.jetbrains.annotations.Nullable
 import org.jetbrains.intellij.build.*
-import org.jetbrains.intellij.build.kotlin.KotlinBinaries
 import org.jetbrains.jps.model.JpsElement
 import org.jetbrains.jps.model.JpsGlobal
 import org.jetbrains.jps.model.JpsModel
@@ -161,11 +160,6 @@ Android Studio: don't patch ApplicationInfo.xml */
   @Override
   JpsCompilationData getCompilationData() {
     compilationContext.compilationData
-  }
-
-  @Override
-  KotlinBinaries getKotlinBinaries() {
-    return compilationContext.kotlinBinaries
   }
 
   @Override
@@ -342,7 +336,7 @@ Android Studio: don't patch ApplicationInfo.xml */
   @NotNull List<String> getAdditionalJvmArguments() {
     List<String> jvmArgs = new ArrayList<>()
 
-    def classLoader = productProperties.classLoader
+    String classLoader = productProperties.classLoader
     if (classLoader != null) {
       jvmArgs.add('-Djava.system.class.loader=' + classLoader)
     }
@@ -365,6 +359,33 @@ Android Studio: don't patch ApplicationInfo.xml */
       //noinspection SpellCheckingInspection
       jvmArgs.add('-Dsplash=true')
     }
+
+    if (options.bundledJreVersion >= 17) {
+      jvmArgs.addAll([
+        '--add-opens=java.base/java.lang=ALL-UNNAMED',
+        '--add-opens=java.base/java.util=ALL-UNNAMED',
+        '--add-opens=java.base/jdk.internal.vm=ALL-UNNAMED',
+        '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED',
+        '--add-opens=java.desktop/java.awt=ALL-UNNAMED',
+        '--add-opens=java.desktop/java.awt.event=ALL-UNNAMED',
+        '--add-opens=java.desktop/java.awt.peer=ALL-UNNAMED',
+        '--add-opens=java.desktop/javax.swing=ALL-UNNAMED',
+        '--add-opens=java.desktop/javax.swing.plaf.basic=ALL-UNNAMED',
+        '--add-opens=java.desktop/javax.swing.text.html=ALL-UNNAMED',
+        '--add-opens=java.desktop/sun.awt=ALL-UNNAMED',
+        '--add-opens=java.desktop/sun.awt.image=ALL-UNNAMED',
+        '--add-opens=java.desktop/sun.awt.windows=ALL-UNNAMED',
+        '--add-opens=java.desktop/sun.font=ALL-UNNAMED',
+        '--add-opens=java.desktop/sun.java2d=ALL-UNNAMED',
+        '--add-opens=java.desktop/sun.swing=ALL-UNNAMED',
+        '--add-opens=java.desktop/com.apple.eawt=ALL-UNNAMED',
+        '--add-opens=java.desktop/com.apple.eawt.event=ALL-UNNAMED',
+        '--add-opens=java.desktop/com.apple.laf=ALL-UNNAMED',
+        '--add-opens=jdk.attach/sun.tools.attach=ALL-UNNAMED',
+        '--add-opens=jdk.jdi/com.sun.tools.jdi=ALL-UNNAMED'
+      ])
+    }
+
     return jvmArgs
   }
 }
